--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -33,10 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load pickled data\n",
@@ -44,9 +42,9 @@
     "\n",
     "# TODO: Fill this in based on where you saved the training and testing data\n",
     "\n",
-    "training_file = ?\n",
-    "validation_file=?\n",
-    "testing_file = ?\n",
+    "training_file = \"traffic-signs-data/train.p\"\n",
+    "validation_file= \"traffic-signs-data/valid.p\"\n",
+    "testing_file = \"traffic-signs-data/test.p\"\n",
     "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
@@ -57,7 +55,50 @@
     "    \n",
     "X_train, y_train = train['features'], train['labels']\n",
     "X_valid, y_valid = valid['features'], valid['labels']\n",
-    "X_test, y_test = test['features'], test['labels']"
+    "X_test, y_test = test['features'], test['labels']\n",
+    "X_validation = X_valid\n",
+    "y_validation = y_valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.amax(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train[0]"
    ]
   },
   {
@@ -87,29 +128,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples = 34799\n",
+      "Number of testing examples = 12630\n",
+      "Image data shape = (32, 32)\n",
+      "Number of classes = 43\n"
+     ]
+    }
+   ],
    "source": [
     "### Replace each question mark with the appropriate value. \n",
     "### Use python, pandas or numpy methods rather than hard coding the results\n",
     "\n",
     "# TODO: Number of training examples\n",
-    "n_train = ?\n",
+    "n_train = y_train.shape[0]\n",
     "\n",
     "# TODO: Number of validation examples\n",
-    "n_validation = ?\n",
+    "n_validation = y_valid.shape[0]\n",
     "\n",
     "# TODO: Number of testing examples.\n",
-    "n_test = ?\n",
+    "n_test = y_test.shape[0]\n",
     "\n",
     "# TODO: What's the shape of an traffic sign image?\n",
-    "image_shape = ?\n",
+    "image_shape = X_train.shape[1:3]\n",
     "\n",
     "# TODO: How many unique classes/labels there are in the dataset.\n",
-    "n_classes = ?\n",
+    "n_classes = len(set(y_train))\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
     "print(\"Number of testing examples =\", n_test)\n",
@@ -137,16 +187,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "### Data exploration visualization code goes here.\n",
     "### Feel free to use as many code cells as needed.\n",
     "import matplotlib.pyplot as plt\n",
     "# Visualizations will be shown in the notebook.\n",
+    "a = X_train[9999]\n",
+    "plt.imshow(a)\n",
+    "plt.show()\n",
     "%matplotlib inline"
    ]
   },
@@ -194,15 +255,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Preprocess the data here. It is required to normalize the data. Other preprocessing steps could include \n",
     "### converting to grayscale, etc.\n",
     "### Feel free to use as many code cells as needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.utils import shuffle\n",
+    "\n",
+    "X_train, y_train = shuffle(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 128"
    ]
   },
   {
@@ -214,15 +296,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Define your architecture here.\n",
     "### Feel free to use as many code cells as needed."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.contrib.layers import flatten\n",
+    "\n",
+    "def LeNet(x):    \n",
+    "    # Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
+    "    mu = 0\n",
+    "    sigma = 0.1\n",
+    "    \n",
+    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
+    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
+    "\n",
+    "    # SOLUTION: Activation.\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
+    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    conv2 = tf.nn.relu(conv2)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    fc0   = flatten(conv2)\n",
+    "    \n",
+    "    # SOLUTION: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
+    "    fc1_b = tf.Variable(tf.zeros(120))\n",
+    "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    fc1    = tf.nn.relu(fc1)\n",
+    "\n",
+    "    # SOLUTION: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
+    "    fc2_b  = tf.Variable(tf.zeros(84))\n",
+    "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    fc2    = tf.nn.relu(fc2)\n",
+    "\n",
+    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma))\n",
+    "    fc3_b  = tf.Variable(tf.zeros(43))\n",
+    "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
+    "    \n",
+    "    return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
+    "y = tf.placeholder(tf.int32, (None))\n",
+    "one_hot_y = tf.one_hot(y, 43)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -241,10 +401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Train your model here.\n",
@@ -252,6 +410,136 @@
     "### Once a final model architecture is selected, \n",
     "### the accuracy on the test set should be calculated and reported as well.\n",
     "### Feel free to use as many code cells as needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/bruce/anaconda3/envs/habitat/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "WARNING:tensorflow:From /home/bruce/anaconda3/envs/habitat/lib/python3.6/site-packages/tensorflow/contrib/layers/python/layers/layers.py:1624: flatten (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use keras.layers.flatten instead.\n",
+      "WARNING:tensorflow:From <ipython-input-15-cc1927ca5975>:4: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "rate = 0.001\n",
+    "\n",
+    "logits = LeNet(x)\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
+    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
+    "training_operation = optimizer.minimize(loss_operation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
+    "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "def evaluate(X_data, y_data):\n",
+    "    num_examples = len(X_data)\n",
+    "    total_accuracy = 0\n",
+    "    sess = tf.get_default_session()\n",
+    "    for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
+    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "        total_accuracy += (accuracy * len(batch_x))\n",
+    "    return total_accuracy / num_examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.695\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.787\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.819\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.838\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.876\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.853\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.878\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.881\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.858\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.851\n",
+      "\n",
+      "Model saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    num_examples = len(X_train)\n",
+    "    \n",
+    "    print(\"Training...\")\n",
+    "    print()\n",
+    "    for i in range(EPOCHS):\n",
+    "        X_train, y_train = shuffle(X_train, y_train)\n",
+    "        for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "            end = offset + BATCH_SIZE\n",
+    "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
+    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "            \n",
+    "        validation_accuracy = evaluate(X_validation, y_validation)\n",
+    "        print(\"EPOCH {} ...\".format(i+1))\n",
+    "        print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
+    "        print()\n",
+    "        \n",
+    "        writer = tf.summary.FileWriter(\"/home/bruce/Education\")\n",
+    "        writer.add_graph(sess.graph)\n",
+    "        \n",
+    "    saver.save(sess, './lenet')\n",
+    "    print(\"Model saved\")"
    ]
   },
   {
@@ -484,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
