upload Alexnet implemnetation

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,14 +361,152 @@
     "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
     "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma))\n",
     "    fc3_b  = tf.Variable(tf.zeros(43))\n",
-    "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
+    "    \n",
+    "    \n",
+    "    #############\n",
+    "    fc3 = tf.matmul(fc2, fc3_W) + fc3_b\n",
+    "    \n",
+    "    fc4_W  = tf.Variable(tf.truncated_normal(shape=(43, 43), mean = mu, stddev = sigma))\n",
+    "    fc4_b  = tf.Variable(tf.zeros(43))\n",
+    "    \n",
+    "    logits = tf.matmul(fc3, fc4_W) + fc4_b\n",
+    "    ################\n",
+    "    #logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
     "    \n",
     "    return logits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
+    "y = tf.placeholder(tf.int32, (None))\n",
+    "one_hot_y = tf.one_hot(y, 43)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test model with alexnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "AlexNet using TensorFlow library.\n",
+    "References:\n",
+    "- Alex Krizhevsky, Ilya Sutskever & Geoffrey E. Hinton.\n",
+    "  ImageNet Classification with Deep Convolutional Neural Networks. NIPS, 2012.\n",
+    "Link:\n",
+    "- https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks\n",
+    "'''\n",
+    "\n",
+    "__author__ = 'Rahul Bhalley'\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "n_inputs = 227 * 227 * 3 # number of input vector elements i.e. pixels per training example\n",
+    "n_classes = 1000 # number of classes to be classified\n",
+    "\n",
+    "# input and output vector placeholders\n",
+    "x = tf.placeholder(tf.float32, [None, n_inputs])\n",
+    "y = tf.placeholder(tf.float32, [None, n_classes])\n",
+    "\n",
+    "# fully connected layer\n",
+    "fc_layer = lambda x, W, b, name=None: tf.nn.bias_add(tf.matmul(x, W), b)\n",
+    "\n",
+    "def alex_net(img, weights, biases):\n",
+    "\n",
+    "    # reshape the input image vector to 227 x 227 x 3 dimensions\n",
+    "    img = tf.reshape(img, [-1, 227, 227, 3])\n",
+    "\n",
+    "    # 1st convolutional layer\n",
+    "    conv1 = tf.nn.conv2d(img, weights[\"wc1\"], strides=[1, 4, 4, 1], padding=\"SAME\", name=\"conv1\")\n",
+    "    conv1 = tf.nn.bias_add(conv1, biases[\"bc1\"])\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "    conv1 = tf.nn.local_response_normalization(conv1, depth_radius=5.0, bias=2.0, alpha=1e-4, beta=0.75)\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 3, 3, 1], strides=[1, 2, 2, 1], padding=\"VALID\")\n",
+    "\n",
+    "    # 2nd convolutional layer\n",
+    "    conv2 = tf.nn.conv2d(conv1, weights[\"wc2\"], strides=[1, 1, 1, 1], padding=\"SAME\", name=\"conv2\")\n",
+    "    conv2 = tf.nn.bias_add(conv2, biases[\"bc2\"])\n",
+    "    conv2 = tf.nn.relu(conv2)\n",
+    "    conv2 = tf.nn.local_response_normalization(conv2, depth_radius=5.0, bias=2.0, alpha=1e-4, beta=0.75)\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 3, 3, 1], strides=[1, 2, 2, 1], padding=\"VALID\")\n",
+    "\n",
+    "    # 3rd convolutional layer\n",
+    "    conv3 = tf.nn.conv2d(conv2, weights[\"wc3\"], strides=[1, 1, 1, 1], padding=\"SAME\", name=\"conv3\")\n",
+    "    conv3 = tf.nn.bias_add(conv3, biases[\"bc3\"])\n",
+    "    conv3 = tf.nn.relu(conv3)\n",
+    "\n",
+    "    # 4th convolutional layer\n",
+    "    conv4 = tf.nn.conv2d(conv3, weights[\"wc4\"], strides=[1, 1, 1, 1], padding=\"SAME\", name=\"conv4\")\n",
+    "    conv4 = tf.nn.bias_add(conv4, biases[\"bc4\"])\n",
+    "    conv4 = tf.nn.relu(conv4)\n",
+    "\n",
+    "    # 5th convolutional layer\n",
+    "    conv5 = tf.nn.conv2d(conv4, weights[\"wc5\"], strides=[1, 1, 1, 1], padding=\"SAME\", name=\"conv5\")\n",
+    "    conv5 = tf.nn.bias_add(conv5, biases[\"bc5\"])\n",
+    "    conv5 = tf.nn.relu(conv5)\n",
+    "    conv5 = tf.nn.max_pool(conv5, ksize=[1, 3, 3, 1], strides=[1, 2, 2, 1], padding=\"VALID\")\n",
+    "\n",
+    "    # stretching out the 5th convolutional layer into a long vector\n",
+    "    shape = [-1, weights['wf1'].get_shape().as_list()[0]]\n",
+    "    flatten = tf.reshape(conv5, shape)\n",
+    "\n",
+    "    # 1st fully connected layer\n",
+    "    fc1 = fc_layer(flatten, weights[\"wf1\"], biases[\"bf1\"], name=\"fc1\")\n",
+    "    fc1 = tf.nn.relu(fc1)\n",
+    "    fc1 = tf.nn.dropout(fc1, keep_prob=0.5)\n",
+    "\n",
+    "    # 2nd fully connected layer\n",
+    "    fc2 = fc_layer(fc1, weights[\"wf2\"], biases[\"bf2\"], name=\"fc2\")\n",
+    "    fc2 = tf.nn.relu(fc2)\n",
+    "    fc2 = tf.nn.dropout(fc2, keep_prob=0.5)\n",
+    "\n",
+    "    # 3rd fully connected layer\n",
+    "    fc3 = fc_layer(fc2, weights[\"wf3\"], biases[\"bf3\"], name=\"fc3\")\n",
+    "    fc3 = tf.nn.softmax(fc3)\n",
+    "\n",
+    "    # Return the complete AlexNet model\n",
+    "    return fc3\n",
+    "\n",
+    "# Weight parameters as devised in the original research paper\n",
+    "weights = {\n",
+    "    \"wc1\": tf.Variable(tf.truncated_normal([11, 11, 3, 96],     stddev=0.01), name=\"wc1\"),\n",
+    "    \"wc2\": tf.Variable(tf.truncated_normal([5, 5, 96, 256],     stddev=0.01), name=\"wc2\"),\n",
+    "    \"wc3\": tf.Variable(tf.truncated_normal([3, 3, 256, 384],    stddev=0.01), name=\"wc3\"),\n",
+    "    \"wc4\": tf.Variable(tf.truncated_normal([3, 3, 384, 384],    stddev=0.01), name=\"wc4\"),\n",
+    "    \"wc5\": tf.Variable(tf.truncated_normal([3, 3, 384, 256],    stddev=0.01), name=\"wc5\"),\n",
+    "    \"wf1\": tf.Variable(tf.truncated_normal([28*28*256, 4096],   stddev=0.01), name=\"wf1\"),\n",
+    "    \"wf2\": tf.Variable(tf.truncated_normal([4096, 4096],        stddev=0.01), name=\"wf2\"),\n",
+    "    \"wf3\": tf.Variable(tf.truncated_normal([4096, n_classes],   stddev=0.01), name=\"wf3\")\n",
+    "}\n",
+    "\n",
+    "# Bias parameters as devised in the original research paper\n",
+    "biases = {\n",
+    "    \"bc1\": tf.Variable(tf.constant(0.0, shape=[96]),        name=\"bc1\"),\n",
+    "    \"bc2\": tf.Variable(tf.constant(1.0, shape=[256]),       name=\"bc2\"),\n",
+    "    \"bc3\": tf.Variable(tf.constant(0.0, shape=[384]),       name=\"bc3\"),\n",
+    "    \"bc4\": tf.Variable(tf.constant(1.0, shape=[384]),       name=\"bc4\"),\n",
+    "    \"bc5\": tf.Variable(tf.constant(1.0, shape=[256]),       name=\"bc5\"),\n",
+    "    \"bf1\": tf.Variable(tf.constant(1.0, shape=[4096]),      name=\"bf1\"),\n",
+    "    \"bf2\": tf.Variable(tf.constant(1.0, shape=[4096]),      name=\"bf2\"),\n",
+    "    \"bf3\": tf.Variable(tf.constant(1.0, shape=[n_classes]), name=\"bf3\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,10 +517,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-53-5f122a9c2228>:66: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "rate = 0.001\n",
+    "\n",
+    "logits = alex_net(x,weights,biases)\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
+    "\n",
+    "reg_losses = tf.get_collection(tf.GraphKeys.REGULARIZATION_LOSSES)\n",
+    "reg_constant = 0  # Choose an appropriate one.\n",
+    "loss = cross_entropy + reg_constant * sum(reg_losses)\n",
+    "\n",
+    "loss_operation = tf.reduce_mean(loss)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
+    "training_operation = optimizer.minimize(loss_operation)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -401,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,45 +575,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/bruce/anaconda3/envs/habitat/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From /home/bruce/anaconda3/envs/habitat/lib/python3.6/site-packages/tensorflow/contrib/layers/python/layers/layers.py:1624: flatten (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use keras.layers.flatten instead.\n",
-      "WARNING:tensorflow:From <ipython-input-15-cc1927ca5975>:4: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "\n",
-      "Future major versions of TensorFlow will allow gradients to flow\n",
-      "into the labels input on backprop by default.\n",
-      "\n",
-      "See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rate = 0.001\n",
     "\n",
     "logits = LeNet(x)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
-    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "\n",
+    "reg_losses = tf.get_collection(tf.GraphKeys.REGULARIZATION_LOSSES)\n",
+    "reg_constant = 0  # Choose an appropriate one.\n",
+    "loss = cross_entropy + reg_constant * sum(reg_losses)\n",
+    "\n",
+    "loss_operation = tf.reduce_mean(loss)\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
     "training_operation = optimizer.minimize(loss_operation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,49 +618,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training...\n",
-      "\n",
-      "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.695\n",
-      "\n",
-      "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.787\n",
-      "\n",
-      "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.819\n",
-      "\n",
-      "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.838\n",
-      "\n",
-      "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.876\n",
-      "\n",
-      "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.853\n",
-      "\n",
-      "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.878\n",
-      "\n",
-      "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.881\n",
-      "\n",
-      "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.858\n",
-      "\n",
-      "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.851\n",
-      "\n",
-      "Model saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
@@ -564,10 +669,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Load the images and plot them here.\n",
@@ -583,10 +686,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Run the predictions here and use the model to output the prediction for each image.\n",
@@ -603,10 +704,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Calculate the accuracy for these 5 new images. \n",
@@ -665,10 +764,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Print out the top five softmax probabilities for the predictions on the German traffic sign images found on the web. \n",
@@ -718,10 +815,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Visualize your network's feature maps here.\n",
@@ -753,6 +848,13 @@
     "        else:\n",
     "            plt.imshow(activation[0,:,:, featuremap], interpolation=\"nearest\", cmap=\"gray\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
